--- a/index.html
+++ b/index.html
@@ -1,1 +1,19 @@
-doctype
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <header>
+        <a href="#">CONTACT US!</a>
+        <a href="#">ABOUT US!</a>
+        <a href="#">ORDER</a>
+        <a href="#">CART</a>
+    </header>
+
+    <p>a</p>
+</body>
+</html>
