--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Café Home</title>
+  <title>Contact Us</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -17,17 +17,11 @@
     </nav>
   </header>
 
-  <section class="hero">
-    <h1>Welcome to Ka'Taqam Café!</h1>
-    <p>A warm and happy experience, unique to our community.</p>
-  </section>
-
-  <section class="about">
-    <h2>Our Mission</h2>
-    <p>To serve not just food, but joy and comfort to every customer.</p>
-
-    <h2>Our Vision</h2>
-    <p>To grow through franchising and adapt to new trends while keeping our unique touch.</p>
+  <section class="contact">
+    <h1>Contact Us</h1>
+    <p>📍 LOC</p>
+    <p>📞 PHONE</p>
+    <p>✉️ EMAIL</p>
   </section>
 </body>
 </html>
