--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Café Home</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="shortcut icon" href="icon.jpg" type="image/x-icon">
 </head>
 <body>
   <header>
@@ -13,20 +14,16 @@
       <a href="menu.html">Order</a>
       <a href="gallery.html">Gallery</a>
       <a href="reviews.html">Reviews</a>
-      <a href="contact.html">Contact Us</a>
+      <a href="contact.html">Contact</a>
     </nav>
   </header>
 
   <section class="hero">
-    <h1>Welcome to Ka'Taqam Café!</h1>
+    <h1 class="big">Welcome to Ka'Taqam Café!</h1>
     <p>A warm and happy experience, unique to our community.</p>
-  </section>
-
-  <section class="about">
-    <h2>Our Mission</h2>
+    <h1>Our Mission</h1>
     <p>To serve not just food, but joy and comfort to every customer.</p>
-
-    <h2>Our Vision</h2>
+    <h1>Our Vision</h1>
     <p>To grow through franchising and adapt to new trends while keeping our unique touch.</p>
   </section>
 </body>
