--- a/gallery.html
+++ b/gallery.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Café Gallery</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="shortcut icon" href="icon.jpg" type="image/x-icon">
 </head>
 <body>
   <header>
@@ -13,7 +14,7 @@
       <a href="menu.html">Order</a>
       <a href="gallery.html">Gallery</a>
       <a href="reviews.html">Reviews</a>
-      <a href="contact.html">Contact Us</a>
+      <a href="contact.html">Contact</a>
     </nav>
   </header>
 
