--- a/menu.html
+++ b/menu.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Café Menu</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="shortcut icon" href="icon.jpg" type="image/x-icon">
 </head>
 <body>
   <header>
@@ -13,29 +14,95 @@
       <a href="menu.html">Order</a>
       <a href="gallery.html">Gallery</a>
       <a href="reviews.html">Reviews</a>
-      <a href="contact.html">Contact Us</a>
+      <a href="contact.html">Contact</a>
     </nav>
   </header>
 
   <section class="menu">
-    <h1>Our Menu</h1>
+    <h1>⚜ Our Menu ⚜</h1>
     <div class="menu-grid">
       <div class="card">
-        <img src="" alt="???">
-        <h3>???</h3>
-        <p>₱100</p>
+        <img src="images/FOOD1.jpg" alt="Chicken Pesto Pizza">
+        <h3>Chicken Pesto Pizza</h3>
+        <p>₱280</p>
         <button>Add to Cart</button>
       </div>
       <div class="card">
-        <img src="" alt="???">
-        <h3>???</h3>
-        <p>₱150</p>
+        <img src="images/FOOD2.jpg" alt="Garlic 3 Cheese Pizza">
+        <h3>Garlic 3 Cheese Pizza</h3>
+        <p>₱250</p>
         <button>Add to Cart</button>
       </div>
       <div class="card">
-        <img src="" alt="???">
-        <h3>???</h3>
-        <p>₱80</p>
+        <img src="images/FOOD3.jpg" alt="Beet It Pezzo Penne">
+        <h3>Beet It Pezzo Penne</h3>
+        <p>₱180</p>
+        <button>Add to Cart</button>
+      </div>
+      <div class="card">
+        <img src="images/FOOD4.jpg" alt="Shrimp and Silk Penne">
+        <h3>Shrimp and Silk Penne</h3>
+        <p>₱220</p>
+        <button>Add to Cart</button>
+      </div>
+      <div class="card">
+        <img src="images/FOOD5.jpg" alt="Pork Knuckle Balbacua">
+        <h3>Pork Knuckle Balbacua</h3>
+        <p>₱450</p>
+        <button>Add to Cart</button>
+      </div>
+      <div class="card">
+        <img src="images/FOOD6.jpg" alt="Creamy Pesto">
+        <h3>Creamy Pesto</h3>
+        <p>₱190</p>
+        <button>Add to Cart</button>
+      </div>
+      <div class="card">
+        <img src="images/FOOD7.jpg" alt="Fried Chicken Delight">
+        <h3>Fried Chicken Delight</h3>
+        <p>₱220</p>
+        <button>Add to Cart</button>
+      </div>
+      <div class="card">
+        <img src="images/FOOD8.jpg" alt="Beef Barbeque">
+        <h3>Beef Barbeque</h3>
+        <p>₱200</p>
+        <button>Add to Cart</button>
+      </div>
+      <div class="card">
+        <img src="images/FOOD9.jpg" alt="Sardine and Olive Penne">
+        <h3>Sardine and Olive Penne</h3>
+        <p>₱170</p>
+        <button>Add to Cart</button>
+      </div>
+      <div class="card">
+        <img src="images/FOOD10.jpg" alt="Hog It All Pizza">
+        <h3>Hog It All Pizza</h3>
+        <p>₱320</p>
+        <button>Add to Cart</button>
+      </div>
+      <div class="card">
+        <img src="images/FOOD11.jpg" alt="Crispy Pata">
+        <h3>Crispy Pata</h3>
+        <p class="gold">₱980</p>
+        <button>Add to Cart</button>
+      </div>
+      <div class="card">
+        <img src="images/FOOD12.jpg" alt="Red Cake Slice">
+        <h3>Red Cake Slice</h3>
+        <p>₱120</p>
+        <button>Add to Cart</button>
+      </div>
+      <div class="card">
+        <img src="images/FOOD13.jpg" alt="Red Velvet Cake">
+        <h3>Red Velvet Cake</h3>
+        <p class="gold">₱950</p>
+        <button>Add to Cart</button>
+      </div>
+      <div class="card">
+        <img src="images/FOOD14.jpg" alt="Rustic Tomato and Beef Penne">
+        <h3>Rustic Tomato and Beef Penne</h3>
+        <p>₱210</p>
         <button>Add to Cart</button>
       </div>
     </div>
