--- a/contact.html
+++ b/contact.html
@@ -20,9 +20,10 @@
 
   <section class="contact">
     <h1>Contact Us</h1>
-    <p>📍 LOC</p>
-    <p>📞 PHONE</p>
-    <p>✉️ EMAIL</p>
+    <p>📍 LOC : Midtown Village, San Andres 1900 Cainta, Philippines</p>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d241.33863411219363!2d121.10705785453321!3d14.57523328337418!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3397c7182ad1c1f9%3A0x7081fca00668c05e!2sKa&#39;Taqam%20Cafe!5e0!3m2!1sen!2sph!4v1758112623254!5m2!1sen!2sph" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    <p>📞 PHONE : 0954 984 8740</p>
+    <a href="mailto:kataqamcafe@gmail.com">✉️ EMAIL : kataqamcafe@gmail.com</a>
   </section>
 </body>
 </html>
