--- a/gallery.html
+++ b/gallery.html
@@ -19,11 +19,15 @@
   </header>
 
   <section class="gallery">
-    <h1>Customer Gallery</h1>
+    <h1>⚜ Customer Gallery ⚜</h1>
     <div class="gallery-grid">
-      <img src="PUT IMG HERE LATER PLS" alt="">
-      <img src="PUT IMG HERE LATER PLS" alt="">
-      <img src="PUT IMG HERE LATER PLS" alt="">
+      <img src="images/GALIMG1.jpg" alt="">
+      <img src="images/GALIMG2.jpg" alt="">
+      <img src="images/GALIMG3.jpg" alt="">
+      <img src="images/GALIMG4.jpg" alt="">
+      <img src="images/GALIMG5.jpg" alt="">
+      <img src="images/GALIMG6.jpg" alt="">
+      <img src="images/GALIMG7.jpg" alt="">
     </div>
     <button>Upload Your Photo</button>
   </section>
