--- a/reviews.html
+++ b/reviews.html
@@ -19,16 +19,36 @@
   </header>
 
   <section class="reviews">
-    <h1>What Our Customers Say</h1>
+    <h1>⚜ What Our Customers Say ⚜</h1>
     <div class="review">
-      <h3>NAME PLACEHOLDER</h3>
+      <h3 class="name"> - lorem</h3>
       <p>⭐⭐⭐⭐⭐</p>
-      <p>Best café in the village! Love the cozy vibe.</p>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam possimus error, tenetur fugit debitis enim eum beatae id perferendis sequi!</p>
     </div>
     <div class="review">
-      <h3>NAME PLACEHOLDER</h3>
+      <h3 class="name"> - lorem</h3>
       <p>⭐⭐⭐⭐</p>
-      <p>Food is great, service can be faster during peak hours.</p>
+      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aut molestiae cumque expedita iste accusamus, ex sed quidem dolores asperiores sequi nisi reiciendis quae facere harum autem dolorem itaque inventore non?</p>
+    </div>
+    <div class="review">
+      <h3 class="name"> - lorem</h3>
+      <p>⭐⭐⭐⭐⭐</p>
+      <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolore quae expedita, tempora perferendis voluptas ratione.</p>
+    </div>
+    <div class="review">
+      <h3 class="name"> - lorem</h3>
+      <p>⭐⭐⭐⭐⭐</p>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae praesentium, temporibus, quos illo totam dolore sint fugit explicabo ullam rerum iste fugiat quisquam, officiis unde?</p>
+    </div>
+    <div class="review">
+      <h3 class="name"> - lorem</h3>
+      <p>⭐⭐⭐⭐⭐</p>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates magni neque iste maxime, velit doloribus. Maxime commodi quo nisi cumque magni possimus architecto!</p>
+    </div>
+    <div class="review">
+      <h3 class="name"> - lorem</h3>
+      <p>⭐⭐⭐</p>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod praesentium corrupti aliquam asperiores debitis natus aspernatur consectetur? Fugiat, recusandae. Temporibus, in ipsum. Quos et distinctio blanditiis minus.</p>
     </div>
   </section>
 </body>
