--- a/gallery.html
+++ b/gallery.html
@@ -21,15 +21,16 @@
   <section class="gallery">
     <h1>⚜ Customer Gallery ⚜</h1>
     <div class="gallery-grid">
-      <img src="images/GALIMG1.jpg" alt="">
-      <img src="images/GALIMG2.jpg" alt="">
-      <img src="images/GALIMG3.jpg" alt="">
-      <img src="images/GALIMG4.jpg" alt="">
-      <img src="images/GALIMG5.jpg" alt="">
-      <img src="images/GALIMG6.jpg" alt="">
-      <img src="images/GALIMG7.jpg" alt="">
+      <img src="GALIMG1.jpg" alt="">
+      <img src="GALIMG2.jpg" alt="">
+      <img src="GALIMG3.jpg" alt="">
+      <img src="GALIMG4.jpg" alt="">
+      <img src="GALIMG5.jpg" alt="">
+      <img src="GALIMG6.jpg" alt="">
+      <img src="GALIMG7.jpg" alt="">
     </div>
     <button>Upload Your Photo</button>
   </section>
 </body>
 </html>
+
