--- a/index.html
+++ b/index.html
@@ -19,12 +19,21 @@
   </header>
 
   <section class="hero">
-    <h1 class="big">Welcome to Ka'Taqam Café!</h1>
-    <p>A warm and happy experience, unique to our community.</p>
-    <h1>Our Mission</h1>
-    <p>To serve not just food, but joy and comfort to every customer.</p>
-    <h1>Our Vision</h1>
-    <p>To grow through franchising and adapt to new trends while keeping our unique touch.</p>
+    <div class="hero-content">
+      <h1 class="big">Welcome to <span class="accent">Ka'Taqam Café!</span></h1>
+      <p class="subtitle">A warm and happy experience, unique to our community.</p>
+      <div class="mission-vision">
+        <div class="mv-card">
+          <h2>Our Mission</h2>
+          <p>To serve not just food, but joy and comfort to every customer.</p>
+        </div>
+        <div class="mv-card">
+          <h2>Our Vision</h2>
+          <p>To grow through franchising and adapt to new trends while keeping our unique touch.</p>
+        </div>
+      </div>
+      <a href="menu.html" class="cta-btn">Order Now</a>
+    </div>
   </section>
 </body>
 </html>
