--- a/menu.html
+++ b/menu.html
@@ -22,85 +22,85 @@
     <h1>⚜ Our Menu ⚜</h1>
     <div class="menu-grid">
       <div class="card">
-        <img src="FOOD1.jpg" alt="Chicken Pesto Pizza">
+        <img src="menu-images/FOOD1.jpg" alt="Chicken Pesto Pizza">
         <h3>Chicken Pesto Pizza</h3>
         <p>₱280</p>
         <button>Add to Cart</button>
       </div>
       <div class="card">
-        <img src="FOOD2.jpg" alt="Garlic 3 Cheese Pizza">
+        <img src="menu-images/FOOD2.jpg" alt="Garlic 3 Cheese Pizza">
         <h3>Garlic 3 Cheese Pizza</h3>
         <p>₱250</p>
         <button>Add to Cart</button>
       </div>
       <div class="card">
-        <img src="FOOD3.jpg" alt="Beet It Pezzo Penne">
+        <img src="menu-images/FOOD3.jpg" alt="Beet It Pezzo Penne">
         <h3>Beet It Pezzo Penne</h3>
         <p>₱180</p>
         <button>Add to Cart</button>
       </div>
       <div class="card">
-        <img src="FOOD4.jpg" alt="Shrimp and Silk Penne">
+        <img src="menu-images/FOOD4.jpg" alt="Shrimp and Silk Penne">
         <h3>Shrimp and Silk Penne</h3>
         <p>₱220</p>
         <button>Add to Cart</button>
       </div>
       <div class="card">
-        <img src="FOOD5.jpg" alt="Pork Knuckle Balbacua">
+        <img src="menu-images/FOOD5.jpg" alt="Pork Knuckle Balbacua">
         <h3>Pork Knuckle Balbacua</h3>
         <p>₱450</p>
         <button>Add to Cart</button>
       </div>
       <div class="card">
-        <img src="FOOD6.jpg" alt="Creamy Pesto">
+        <img src="menu-images/FOOD6.jpg" alt="Creamy Pesto">
         <h3>Creamy Pesto</h3>
         <p>₱190</p>
         <button>Add to Cart</button>
       </div>
       <div class="card">
-        <img src="FOOD7.jpg" alt="Fried Chicken Delight">
+        <img src="menu-images/FOOD7.jpg" alt="Fried Chicken Delight">
         <h3>Fried Chicken Delight</h3>
         <p>₱220</p>
         <button>Add to Cart</button>
       </div>
       <div class="card">
-        <img src="FOOD8.jpg" alt="Beef Barbeque">
+        <img src="menu-images/FOOD8.jpg" alt="Beef Barbeque">
         <h3>Beef Barbeque</h3>
         <p>₱200</p>
         <button>Add to Cart</button>
       </div>
       <div class="card">
-        <img src="FOOD9.jpg" alt="Sardine and Olive Penne">
+        <img src="menu-images/FOOD9.jpg" alt="Sardine and Olive Penne">
         <h3>Sardine and Olive Penne</h3>
         <p>₱170</p>
         <button>Add to Cart</button>
       </div>
       <div class="card">
-        <img src="FOOD10.jpg" alt="Hog It All Pizza">
+        <img src="menu-images/FOOD10.jpg" alt="Hog It All Pizza">
         <h3>Hog It All Pizza</h3>
         <p>₱320</p>
         <button>Add to Cart</button>
       </div>
       <div class="card">
-        <img src="FOOD11.jpg" alt="Crispy Pata">
+        <img src="menu-images/FOOD11.jpg" alt="Crispy Pata">
         <h3>Crispy Pata</h3>
         <p class="gold">₱980</p>
         <button>Add to Cart</button>
       </div>
       <div class="card">
-        <img src="FOOD12.jpg" alt="Red Cake Slice">
+        <img src="menu-images/FOOD12.jpg" alt="Red Cake Slice">
         <h3>Red Cake Slice</h3>
         <p>₱120</p>
         <button>Add to Cart</button>
       </div>
       <div class="card">
-        <img src="FOOD13.jpg" alt="Red Velvet Cake">
+        <img src="menu-images/FOOD13.jpg" alt="Red Velvet Cake">
         <h3>Red Velvet Cake</h3>
         <p class="gold">₱950</p>
         <button>Add to Cart</button>
       </div>
       <div class="card">
-        <img src="FOOD14.jpg" alt="Rustic Tomato and Beef Penne">
+        <img src="menu-images/FOOD14.jpg" alt="Rustic Tomato and Beef Penne">
         <h3>Rustic Tomato and Beef Penne</h3>
         <p>₱210</p>
         <button>Add to Cart</button>
