--- a/gallery.html
+++ b/gallery.html
@@ -17,20 +17,33 @@
       <a href="contact.html">Contact</a>
     </nav>
   </header>
-
   <section class="gallery">
     <h1>⚜ Customer Gallery ⚜</h1>
     <div class="gallery-grid">
-      <img src="gallery-images/GALIMG1.jpg" alt="">
-      <img src="gallery-images/GALIMG2.jpg" alt="">
-      <img src="gallery-images/GALIMG3.jpg" alt="">
-      <img src="gallery-images/GALIMG4.jpg" alt="">
-      <img src="gallery-images/GALIMG5.jpg" alt="">
-      <img src="gallery-images/GALIMG6.jpg" alt="">
-      <img src="gallery-images/GALIMG7.jpg" alt="">
+      <a href="gallery-images/GALIMG1.jpg" target="_blank">
+        <img src="gallery-images/GALIMG1.jpg" alt="">
+      </a>
+      <a href="gallery-images/GALIMG2.jpg" target="_blank">
+        <img src="gallery-images/GALIMG2.jpg" alt="">
+      </a>
+      <a href="gallery-images/GALIMG3.jpg" target="_blank">
+        <img src="gallery-images/GALIMG3.jpg" alt="">
+      </a>
+      <a href="gallery-images/GALIMG4.jpg" target="_blank">
+        <img src="gallery-images/GALIMG4.jpg" alt="">
+      </a>
+      <a href="gallery-images/GALIMG5.jpg" target="_blank">
+        <img src="gallery-images/GALIMG5.jpg" alt="">
+      </a>
+      <a href="gallery-images/GALIMG6.jpg" target="_blank">
+        <img src="gallery-images/GALIMG6.jpg" alt="">
+      </a>
+      <a href="gallery-images/GALIMG7.jpg" target="_blank">
+        <img src="gallery-images/GALIMG7.jpg" alt="">
+      </a>
     </div>
     <button>Upload Your Photo</button>
   </section>
 </body>
-</html>
 
+</html>
