--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="style.css">
   <link rel="shortcut icon" href="icon.jpg" type="image/x-icon">
 </head>
-<body>
+<body class="index">
   <header>
     <nav>
       <a href="index.html">Home</a>
@@ -20,7 +20,7 @@
 
   <section class="hero">
     <div class="hero-content">
-      <h1 class="big">Welcome to <span class="accent">Ka'Taqam Café!</span></h1>
+      <h1 class="big">Welcome to <span class="accent"> <br>Ka'Taqam Café!</span></h1>
       <p class="subtitle">A warm and happy experience, unique to our community.</p>
       <div class="mission-vision">
         <div class="mv-card">
