fixed responsiveness for small screens

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           <p>To grow through franchising and adapt to new trends while keeping our unique touch.</p>
         </div>
       </div>
-      <a href="menu.html" class="cta-btn">Order Now</a>
+      <a href="menu.html" class="cta-btn">Order Now!</a>
     </div>
   </section>
 </body>
