--- a/reviews.html
+++ b/reviews.html
@@ -19,7 +19,7 @@
   </header>
 
   <section class="reviews">
-    <h1>⚜ What Our Customers Say ⚜</h1>
+    <h1>⚜ Reviews ⚜</h1>
     <div class="reviews-grid">
       <div class="review">
         <h3 class="name"> - lorem</h3>
