--- a/gallery.html
+++ b/gallery.html
@@ -9,16 +9,31 @@
 </head>
 <body>
   <header>
-    <nav>
-      <a href="index.html">Home</a>
-      <a href="menu.html">Order</a>
-      <a href="gallery.html">Gallery</a>
-      <a href="reviews.html">Reviews</a>
-      <a href="contact.html">Contact</a>
-    </nav>
+    <div class="header-container">
+      <div class="logo">
+        <a href="index.html">
+          <img src="icon.jpg" alt="Ka'Taqam Café Logo" class="logo-icon"> Ka'Taqam Café
+        </a>
+      </div>
+      <nav>
+        <button class="hbm" aria-label="Toggle menu">
+          <span class="line"></span>
+          <span class="line"></span>
+          <span class="line"></span>
+        </button>
+        <ul>
+          <li><button class="close-btn" aria-label="Close menu">&times;</button></li>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="menu.html">Order</a></li>
+          <li><a href="gallery.html" class="active">Gallery</a></li>
+          <li><a href="reviews.html">Reviews</a></li>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
+      </nav>
+    </div>
   </header>
   <section class="gallery">
-    <h1>⚜ Customer Gallery ⚜</h1>
+    <h1>⚜ Gallery ⚜</h1>
     <div class="gallery-grid">
       <a href="gallery-images/GALIMG1.jpg" target="_blank">
         <img src="gallery-images/GALIMG1.jpg" alt="">
@@ -44,6 +59,7 @@
     </div>
     <button>Upload Your Photo</button>
   </section>
+  <script src="script.js"></script>
 </body>
 
 </html>
