--- a/gallery.html
+++ b/gallery.html
@@ -57,7 +57,10 @@
         <img src="gallery-images/GALIMG7.jpg" alt="">
       </a>
     </div>
-    <button>Upload Your Photo</button>
+    <div class="upload-container">
+      <label for="file-upload" class="upload-btn">Upload Your Photo</label>
+      <input id="file-upload" type="file" accept="image/jpeg, image/png, image/gif">
+    </div>
   </section>
   <script src="script.js"></script>
 </body>
