--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,7 +8,8 @@
   <link rel="stylesheet" href="style.css">
   <link rel="shortcut icon" href="icon.jpg" type="image/x-icon">
 </head>
-<body class="index">
+
+<body>
   <header>
     <div class="header-container">
       <div class="logo">
@@ -33,23 +35,21 @@
     </div>
   </header>
 
-  <section class="hero">
-    <div class="hero-content">
-      <h1 class="big">Welcome to <br>Ka'Taqam Café!</span></h1>
-      <p class="subtitle">A warm and happy experience, unique to our community.</p>
-      <div class="mission-vision">
-        <div class="mv-card">
-          <h2>Our Mission</h2>
-          <p>To serve not just food, but joy and comfort to every customer.</p>
-        </div>
-        <div class="mv-card">
-          <h2>Our Vision</h2>
-          <p>To grow through franchising and adapt to new trends while keeping our unique touch.</p>
-        </div>
+  <div class="flexy">
+    <div class="first">
+      <h1>Welcome to Ka'Taqam Café!</h1>
+      <p>A warm and happy experience, unique to our community.</p>
+      <div class="box1">
+        <h2>Our mission</h2>
+        <p>To serve not just food, but joy and comfort to every customer.</p>
       </div>
-      <a href="menu.html" class="cta-btn">Order Now!</a>
+      <div class="box1">
+        <h2>Our vision</h2>
+        <p>To grow through franchising and adapt to new trends while keeping our unique touch.</p>
+      </div>
     </div>
-  </section>
+  </div>
   <script src="script.js"></script>
 </body>
+
 </html>
