--- a/index.html
+++ b/index.html
@@ -10,46 +10,164 @@
 </head>
 
 <body>
-  <header>
-    <div class="header-container">
-      <div class="logo">
-        <a href="index.html">
-          <img src="icon.jpg" alt="Ka'Taqam Café Logo" class="logo-icon"> Ka'Taqam Café
-        </a>
+  <div class="all">
+    <header>
+      <div class="header-container">
+        <div class="logo">
+          <a href="index.html">
+            <img src="icon.jpg" alt="Ka'Taqam Café Logo" class="logo-icon"> Ka'Taqam Café
+          </a>
+        </div>
+        <nav>
+          <button class="hbm" aria-label="Toggle menu">
+            <span class="line"></span>
+            <span class="line"></span>
+            <span class="line"></span>
+          </button>
+          <ul>
+            <li><button class="close-btn" aria-label="Close menu">&times;</button></li>
+            <li><a href="#" class="active">Home</a></li>
+            <li><a href="menu.html">Order</a></li>
+            <li><a href="#gallery" class="gal">Gallery</a></li>
+            <li><a href="#reviews" class="rev">Reviews</a></li>
+            <li><a href="#contact" class="con">Contact</a></li>
+          </ul>
+        </nav>
       </div>
-      <nav>
-        <button class="hbm" aria-label="Toggle menu">
-          <span class="line"></span>
-          <span class="line"></span>
-          <span class="line"></span>
-        </button>
-        <ul>
-          <li><button class="close-btn" aria-label="Close menu">&times;</button></li>
-          <li><a href="index.html" class="active">Home</a></li>
-          <li><a href="menu.html">Order</a></li>
-          <li><a href="gallery.html">Gallery</a></li>
-          <li><a href="reviews.html">Reviews</a></li>
-          <li><a href="contact.html">Contact</a></li>
-        </ul>
-      </nav>
-    </div>
-  </header>
+    </header>
 
-  <div class="flexy">
-    <div class="first">
-      <h1>Welcome to Ka'Taqam Café!</h1>
-      <p>A warm and happy experience, unique to our community.</p>
-      <div class="box1">
-        <h2>Our mission</h2>
-        <p>To serve not just food, but joy and comfort to every customer.</p>
-      </div>
-      <div class="box1">
-        <h2>Our vision</h2>
-        <p>To grow through franchising and adapt to new trends while keeping our unique touch.</p>
+    <div class="flexy">
+      <div class="first">
+        <h1>Welcome to Ka'Taqam Café!</h1>
+        <p>A warm and happy experience, unique to our community.</p>
+        <div class="box1">
+          <h2>Our mission</h2>
+          <p>To serve not just food, but joy and comfort to every customer.</p>
+        </div>
+        <div class="box1">
+          <h2>Our vision</h2>
+          <p>To grow through franchising and adapt to new trends while keeping our unique touch.</p>
+        </div>
       </div>
     </div>
+
+    <div class="divbox">
+      <section class="gallery" id="gallery">
+        <h1>⚜ Gallery ⚜</h1>
+        <div class="gallery-grid">
+          <a href="gallery-images/GALIMG1.jpg" target="_blank">
+            <img src="gallery-images/GALIMG1.jpg" alt="">
+          </a>
+          <a href="gallery-images/GALIMG2.jpg" target="_blank">
+            <img src="gallery-images/GALIMG2.jpg" alt="">
+          </a>
+          <a href="gallery-images/GALIMG3.jpg" target="_blank">
+            <img src="gallery-images/GALIMG3.jpg" alt="">
+          </a>
+          <a href="gallery-images/GALIMG4.jpg" target="_blank">
+            <img src="gallery-images/GALIMG4.jpg" alt="">
+          </a>
+          <a href="gallery-images/GALIMG5.jpg" target="_blank">
+            <img src="gallery-images/GALIMG5.jpg" alt="">
+          </a>
+          <a href="gallery-images/GALIMG6.jpg" target="_blank">
+            <img src="gallery-images/GALIMG6.jpg" alt="">
+          </a>
+          <a href="gallery-images/GALIMG7.jpg" target="_blank">
+            <img src="gallery-images/GALIMG7.jpg" alt="">
+          </a>
+        </div>
+        <div class="upload-container">
+          <label for="file-upload" class="upload-btn">Upload Your Photo</label>
+        </div>
+      </section>
+    </div>
+    <div class="divbox">
+      <section class="reviews" id="reviews">
+        <h1>⚜ Reviews ⚜</h1>
+        <div class="reviews-grid">
+          <div class="review">
+            <h3 class="name"> - lorem</h3>
+            <p class="star">⭐⭐⭐⭐⭐</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam possimus error, tenetur fugit debitis enim
+              eum beatae id perferendis sequi!</p>
+          </div>
+          <div class="review">
+            <h3 class="name"> - lorem</h3>
+            <p class="star">⭐⭐⭐⭐⭐</p>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aut molestiae cumque expedita iste accusamus,
+              ex
+              sed quidem dolores asperiores sequi nisi reiciendis quae facere harum autem dolorem itaque inventore non?
+            </p>
+          </div>
+          <div class="review">
+            <h3 class="name"> - lorem</h3>
+            <p class="star">⭐⭐⭐⭐</p>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolore quae expedita, tempora perferendis
+              voluptas ratione.</p>
+          </div>
+          <div class="review">
+            <h3 class="name"> - lorem</h3>
+            <p class="star">⭐⭐⭐</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae praesentium, temporibus, quos illo
+              totam dolore sint fugit explicabo ullam rerum iste fugiat quisquam, officiis unde?</p>
+          </div>
+          <div class="review">
+            <h3 class="name"> - lorem</h3>
+            <p class="star">⭐⭐</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates magni neque iste maxime, velit
+              doloribus. Maxime commodi quo nisi cumque magni possimus architecto!</p>
+          </div>
+          <div class="review">
+            <h3 class="name"> - lorem</h3>
+            <p class="star">⭐⭐⭐⭐</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod praesentium corrupti aliquam asperiores
+              debitis natus aspernatur consectetur? Fugiat, recusandae. Temporibus, in ipsum. Quos et distinctio
+              blanditiis minus.</p>
+          </div>
+        </div>
+      </section>
+    </div>
+    <div class="divbox">
+      <section class="contact" id="contact">
+        <h1>Contact Us</h1>
+        <div class="contact-container">
+          <div class="contact-info">
+            <h2>Get In Touch</h2>
+            <div class="contact-item">
+              <p><strong>📍 Address:</strong><br>Midtown Village, San Andres 1900 Cainta, Philippines</p>
+            </div>
+            <div class="contact-item">
+              <p><strong>📞 Phone:</strong><br><a href="tel:09549848740">0954 984 8740</a></p>
+            </div>
+            <div class="contact-item">
+              <p><strong>✉️ Email:</strong><br><a href="mailto:kataqamcafe@gmail.com">kataqamcafe@gmail.com</a></p>
+            </div>
+            <div class="contact-item">
+              <p><strong>⏰ Business Hours:</strong><br>8 AM to 11 PM (Friday to Wednesday)</p>
+            </div>
+          </div>
+          <div class="map-container">
+            <iframe
+              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d241.33863411219363!2d121.10705785453321!3d14.57523328337418!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3397c7182ad1c1f9%3A0x7081fca00668c05e!2sKa&#39;Taqam%20Cafe!5e0!3m2!1sen!2sph!4v1758112623254!5m2!1sen!2sph"
+              width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+              referrerpolicy="no-referrer-when-downgrade"></iframe>
+          </div>
+        </div>
+      </section>
+    </div>
+
+    <footer>
+
+    </footer>
+    <script src="script.js"></script>
   </div>
-  <script src="script.js"></script>
+
+  <div class="message">
+    <h1>NOTICE</h1>
+    <h1>⚠️</h1>
+    <p>Your device is unfortunately too small for us to handle.<br>Please use a bigger device. <br>Thank you!</p>
+  </div>
 </body>
 
 </html>
