--- a/menu.html
+++ b/menu.html
@@ -25,9 +25,9 @@
           <li><button class="close-btn" aria-label="Close menu">&times;</button></li>
           <li><a href="index.html">Home</a></li>
           <li><a href="menu.html" class="active">Order</a></li>
-          <li><a href="gallery.html">Gallery</a></li>
-          <li><a href="reviews.html">Reviews</a></li>
-          <li><a href="contact.html">Contact</a></li>
+          <li><a href="index.html#gallery">Gallery</a></li>
+          <li><a href="index.html#reviews">Reviews</a></li>
+          <li><a href="index.html#contact">Contact</a></li>
         </ul>
       </nav>
     </div>
