--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
   <div class="message">
     <h1>NOTICE</h1>
     <h1>⚠️</h1>
-    <p>Your device is unfortunately too small for us to handle.<br>Please use a bigger device. <br>Thank you!</p>
+    <p>Your device is unfortunately too small for us to handle.<br>Please use a bigger device. <br>Thank you! :)</p>
   </div>
 </body>
 
