--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Café Home</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="MAIN/style.css">
   <link rel="shortcut icon" href="icon.jpg" type="image/x-icon">
 </head>
 
@@ -55,7 +55,7 @@
       <section class="gallery" id="gallery">
         <h1>⚜ Gallery ⚜</h1>
         <div class="gallery-grid">
-          <a href="gallery-images/GALIMG1.jpg" target="_blank">
+          <a href="../gallery-images/GALIMG1.jpg" target="_blank">
             <img src="gallery-images/GALIMG1.jpg" alt="">
           </a>
           <a href="gallery-images/GALIMG2.jpg" target="_blank">
@@ -160,7 +160,7 @@
     <footer>
 
     </footer>
-    <script src="script.js"></script>
+    <script src="MAIN/script.js"></script>
   </div>
 
   <div class="message">
