--- a/menu.html
+++ b/menu.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Café Menu</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="MAIN/style.css">
   <link rel="shortcut icon" href="icon.jpg" type="image/x-icon">
 </head>
 <body>
@@ -201,7 +201,7 @@
     </div>
   </section>
 
-  <script src="script.js"></script>
+  <script src="MAIN/script.js"></script>
 </body>
 
 </html>
