--- a/index.html
+++ b/index.html
@@ -53,7 +53,9 @@
 
     <div class="divbox">
       <section class="gallery" id="gallery">
-        <h1>⚜ Gallery ⚜</h1>
+        <h1>Gallery <br><span class="small">
+            Images uploaded by our customers.
+          </span></h1>
         <div class="gallery-grid">
           <a href="../gallery-images/GALIMG1.jpg" target="_blank">
             <img src="gallery-images/GALIMG1.jpg" alt="">
@@ -77,24 +79,23 @@
             <img src="gallery-images/GALIMG7.jpg" alt="">
           </a>
         </div>
-        <div class="upload-container">
-          <label for="file-upload" class="upload-btn">Upload Your Photo</label>
-        </div>
       </section>
     </div>
     <div class="divbox">
       <section class="reviews" id="reviews">
-        <h1>⚜ Reviews ⚜</h1>
+        <h1>Reviews<br><span class="small">
+            Honest reviews from our customers.
+          </span></h1>
         <div class="reviews-grid">
           <div class="review">
             <h3 class="name"> - lorem</h3>
-            <p class="star">⭐⭐⭐⭐⭐</p>
+            <div class="star-rating" data-rating="5"></div>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam possimus error, tenetur fugit debitis enim
               eum beatae id perferendis sequi!</p>
           </div>
           <div class="review">
             <h3 class="name"> - lorem</h3>
-            <p class="star">⭐⭐⭐⭐⭐</p>
+            <div class="star-rating" data-rating="5"></div>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aut molestiae cumque expedita iste accusamus,
               ex
               sed quidem dolores asperiores sequi nisi reiciendis quae facere harum autem dolorem itaque inventore non?
@@ -102,25 +103,25 @@
           </div>
           <div class="review">
             <h3 class="name"> - lorem</h3>
-            <p class="star">⭐⭐⭐⭐</p>
+            <div class="star-rating" data-rating="4"></div>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolore quae expedita, tempora perferendis
               voluptas ratione.</p>
           </div>
           <div class="review">
             <h3 class="name"> - lorem</h3>
-            <p class="star">⭐⭐⭐</p>
+            <div class="star-rating" data-rating="3"></div>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae praesentium, temporibus, quos illo
               totam dolore sint fugit explicabo ullam rerum iste fugiat quisquam, officiis unde?</p>
           </div>
           <div class="review">
             <h3 class="name"> - lorem</h3>
-            <p class="star">⭐⭐</p>
+            <div class="star-rating" data-rating="2"></div>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates magni neque iste maxime, velit
               doloribus. Maxime commodi quo nisi cumque magni possimus architecto!</p>
           </div>
           <div class="review">
             <h3 class="name"> - lorem</h3>
-            <p class="star">⭐⭐⭐⭐</p>
+            <div class="star-rating" data-rating="4"></div>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod praesentium corrupti aliquam asperiores
               debitis natus aspernatur consectetur? Fugiat, recusandae. Temporibus, in ipsum. Quos et distinctio
               blanditiis minus.</p>
