--- a/menu.html
+++ b/menu.html
@@ -34,8 +34,7 @@
   </header>
 
   <section class="menu">
-    <h1>⚜ Our Menu ⚜</h1>
-
+    <h1>Our Menu</h1>
     <div class="menu-category">
       <h2>Pizza</h2>
       <div class="menu-grid">
