Changes - added stuffs (read desc)
Added a footer for main and order section.
Added a device screen too small notice for the order section.
Fixed responsiveness of some stuffs.
Fixed responsiveness for the review section in main.

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <div class="divbox">
       <section class="gallery" id="gallery">
         <h1>Gallery <br><span class="small">
-            Images uploaded by our customers.
+            Images taken by our customers.
           </span></h1>
         <div class="gallery-grid">
           <a href="../gallery-images/GALIMG1.jpg" target="_blank">
@@ -84,7 +84,7 @@
     <div class="divbox">
       <section class="reviews" id="reviews">
         <h1>Reviews<br><span class="small">
-            Honest reviews from our customers.
+            Honest reviews given by our customers.
           </span></h1>
         <div class="reviews-grid">
           <div class="review">
@@ -159,7 +159,12 @@
     </div>
 
     <footer>
-
+      <div class="footer">
+        <img src="icon.jpg" alt="Ka'Taqam Café Logo" class="logoicon2"> Ka'Taqam Café
+        <a href=""><img src="logos/icons8-facebook-144.png" alt=""></a>
+        <a href=""><img src="logos/icons8-instagram-144.png" alt=""></a>
+        <a href=""><img src="logos/icons8-tiktok-144.png" alt=""></a>
+      </div>
     </footer>
     <script src="MAIN/script.js"></script>
   </div>
