--- a/menu.html
+++ b/menu.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,199 +8,215 @@
   <link rel="stylesheet" href="MAIN/style.css">
   <link rel="shortcut icon" href="icon.jpg" type="image/x-icon">
 </head>
+
 <body>
-  <header>
-    <div class="header-container">
-      <div class="logo">
-        <a href="index.html">
-          <img src="icon.jpg" alt="Ka'Taqam Café Logo" class="logo-icon"> Ka'Taqam Café
-        </a>
+  <div class="all">
+    <header>
+      <div class="header-container">
+        <div class="logo">
+          <a href="index.html">
+            <img src="icon.jpg" alt="Ka'Taqam Café Logo" class="logo-icon"> Ka'Taqam Café
+          </a>
+        </div>
+        <nav>
+          <button class="hbm" aria-label="Toggle menu">
+            <span class="line"></span>
+            <span class="line"></span>
+            <span class="line"></span>
+          </button>
+          <ul>
+            <li><button class="close-btn" aria-label="Close menu">&times;</button></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="menu.html" class="active">Order</a></li>
+            <li><a href="index.html#gallery">Gallery</a></li>
+            <li><a href="index.html#reviews">Reviews</a></li>
+            <li><a href="index.html#contact">Contact</a></li>
+          </ul>
+        </nav>
       </div>
-      <nav>
-        <button class="hbm" aria-label="Toggle menu">
-          <span class="line"></span>
-          <span class="line"></span>
-          <span class="line"></span>
-        </button>
-        <ul>
-          <li><button class="close-btn" aria-label="Close menu">&times;</button></li>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="menu.html" class="active">Order</a></li>
-          <li><a href="index.html#gallery">Gallery</a></li>
-          <li><a href="index.html#reviews">Reviews</a></li>
-          <li><a href="index.html#contact">Contact</a></li>
-        </ul>
-      </nav>
-    </div>
-  </header>
+    </header>
 
-  <section class="menu">
-    <h1>Our Menu</h1>
-    <div class="menu-category">
-      <h2>Pizza</h2>
-      <div class="menu-grid">
-        <div class="card">
-          <img src="menu-images/FOOD1.jpg" alt="Chicken Pesto Pizza">
-          <div class="card-content">
-            <h3>Chicken Pesto Pizza</h3>
-            <div class="card-footer">
-              <p class="price">₱280</p>
-              <button class="ordr-btn">Add to Cart</button>
+    <section class="menu">
+      <h1>Our Menu</h1>
+      <div class="menu-category">
+        <h2>Pizza</h2>
+        <div class="menu-grid">
+          <div class="card">
+            <img src="menu-images/FOOD1.jpg" alt="Chicken Pesto Pizza">
+            <div class="card-content">
+              <h3>Chicken Pesto Pizza</h3>
+              <div class="card-footer">
+                <p class="price">₱280</p>
+                <button class="ordr-btn">Add to Cart</button>
+              </div>
             </div>
           </div>
-        </div>
-        <div class="card">
-          <img src="menu-images/FOOD2.jpg" alt="Garlic 3 Cheese Pizza">
-          <div class="card-content">
-            <h3>Garlic 3 Cheese Pizza</h3>
-            <div class="card-footer">
-              <p class="price">₱250</p>
-              <button class="ordr-btn">Add to Cart</button>
+          <div class="card">
+            <img src="menu-images/FOOD2.jpg" alt="Garlic 3 Cheese Pizza">
+            <div class="card-content">
+              <h3>Garlic 3 Cheese Pizza</h3>
+              <div class="card-footer">
+                <p class="price">₱250</p>
+                <button class="ordr-btn">Add to Cart</button>
+              </div>
             </div>
           </div>
-        </div>
-        <div class="card">
-          <img src="menu-images/FOOD10.jpg" alt="Hog It All Pizza">
-          <div class="card-content">
-            <h3>Hog It All Pizza</h3>
-            <div class="card-footer">
-              <p class="price">₱320</p>
-              <button class="ordr-btn">Add to Cart</button>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <div class="menu-category">
-      <h2>Pasta</h2>
-      <div class="menu-grid">
-        <div class="card">
-          <img src="menu-images/FOOD3.jpg" alt="Beet It Pezzo Penne">
-          <div class="card-content">
-            <h3>Beet It Pezzo Penne</h3>
-            <div class="card-footer">
-              <p class="price">₱180</p>
-              <button class="ordr-btn">Add to Cart</button>
-            </div>
-          </div>
-        </div>
-        <div class="card">
-          <img src="menu-images/FOOD4.jpg" alt="Shrimp and Silk Penne">
-          <div class="card-content">
-            <h3>Shrimp and Silk Penne</h3>
-            <div class="card-footer">
-              <p class="price">₱220</p>
-              <button class="ordr-btn">Add to Cart</button>
-            </div>
-          </div>
-        </div>
-        <div class="card">
-          <img src="menu-images/FOOD6.jpg" alt="Creamy Pesto">
-          <div class="card-content">
-            <h3>Creamy Pesto</h3>
-            <div class="card-footer">
-              <p class="price">₱190</p>
-              <button class="ordr-btn">Add to Cart</button>
-            </div>
-          </div>
-        </div>
-        <div class="card">
-          <img src="menu-images/FOOD9.jpg" alt="Sardine and Olive Penne">
-          <div class="card-content">
-            <h3>Sardine and Olive Penne</h3>
-            <div class="card-footer">
-              <p class="price">₱170</p>
-              <button class="ordr-btn">Add to Cart</button>
-            </div>
-          </div>
-        </div>
-        <div class="card">
-          <img src="menu-images/FOOD14.jpg" alt="Rustic Tomato and Beef Penne">
-          <div class="card-content">
-            <h3>Rustic Tomato and Beef Penne</h3>
-            <div class="card-footer">
-              <p class="price">₱210</p>
-              <button class="ordr-btn">Add to Cart</button>
+          <div class="card">
+            <img src="menu-images/FOOD10.jpg" alt="Hog It All Pizza">
+            <div class="card-content">
+              <h3>Hog It All Pizza</h3>
+              <div class="card-footer">
+                <p class="price">₱320</p>
+                <button class="ordr-btn">Add to Cart</button>
+              </div>
             </div>
           </div>
         </div>
       </div>
-    </div>
 
-    <div class="menu-category">
-      <h2>Main Courses</h2>
-      <div class="menu-grid">
-        <div class="card">
-          <img src="menu-images/FOOD5.jpg" alt="Pork Knuckle Balbacua">
-          <div class="card-content">
-            <h3>Pork Knuckle Balbacua</h3>
-            <div class="card-footer">
-              <p class="price">₱450</p>
-              <button class="ordr-btn">Add to Cart</button>
+      <div class="menu-category">
+        <h2>Pasta</h2>
+        <div class="menu-grid">
+          <div class="card">
+            <img src="menu-images/FOOD3.jpg" alt="Beet It Pezzo Penne">
+            <div class="card-content">
+              <h3>Beet It Pezzo Penne</h3>
+              <div class="card-footer">
+                <p class="price">₱180</p>
+                <button class="ordr-btn">Add to Cart</button>
+              </div>
             </div>
           </div>
-        </div>
-        <div class="card">
-          <img src="menu-images/FOOD7.jpg" alt="Fried Chicken Delight">
-          <div class="card-content">
-            <h3>Fried Chicken Delight</h3>
-            <div class="card-footer">
-              <p class="price">₱220</p>
-              <button class="ordr-btn">Add to Cart</button>
+          <div class="card">
+            <img src="menu-images/FOOD4.jpg" alt="Shrimp and Silk Penne">
+            <div class="card-content">
+              <h3>Shrimp and Silk Penne</h3>
+              <div class="card-footer">
+                <p class="price">₱220</p>
+                <button class="ordr-btn">Add to Cart</button>
+              </div>
             </div>
           </div>
-        </div>
-        <div class="card">
-          <img src="menu-images/FOOD8.jpg" alt="Beef Barbeque">
-          <div class="card-content">
-            <h3>Beef Barbeque</h3>
-            <div class="card-footer">
-              <p class="price">₱200</p>
-              <button class="ordr-btn">Add to Cart</button>
+          <div class="card">
+            <img src="menu-images/FOOD6.jpg" alt="Creamy Pesto">
+            <div class="card-content">
+              <h3>Creamy Pesto</h3>
+              <div class="card-footer">
+                <p class="price">₱190</p>
+                <button class="ordr-btn">Add to Cart</button>
+              </div>
             </div>
           </div>
-        </div>
-        <div class="card">
-          <img src="menu-images/FOOD11.jpg" alt="Crispy Pata">
-          <div class="card-content">
-            <h3>Crispy Pata</h3>
-            <div class="card-footer">
-              <p class="price gold">₱980</p>
-              <button class="ordr-btn">Add to Cart</button>
+          <div class="card">
+            <img src="menu-images/FOOD9.jpg" alt="Sardine and Olive Penne">
+            <div class="card-content">
+              <h3>Sardine and Olive Penne</h3>
+              <div class="card-footer">
+                <p class="price">₱170</p>
+                <button class="ordr-btn">Add to Cart</button>
+              </div>
+            </div>
+          </div>
+          <div class="card">
+            <img src="menu-images/FOOD14.jpg" alt="Rustic Tomato and Beef Penne">
+            <div class="card-content">
+              <h3>Rustic Tomato and Beef Penne</h3>
+              <div class="card-footer">
+                <p class="price">₱210</p>
+                <button class="ordr-btn">Add to Cart</button>
+              </div>
             </div>
           </div>
         </div>
       </div>
-    </div>
 
-    <div class="menu-category">
-      <h2>Desserts</h2>
-      <div class="menu-grid">
-        <div class="card">
-          <img src="menu-images/FOOD12.jpg" alt="Red Cake Slice">
-          <div class="card-content">
-            <h3>Red Cake Slice</h3>
-            <div class="card-footer">
-              <p class="price">₱120</p>
-              <button class="ordr-btn">Add to Cart</button>
+      <div class="menu-category">
+        <h2>Main Courses</h2>
+        <div class="menu-grid">
+          <div class="card">
+            <img src="menu-images/FOOD5.jpg" alt="Pork Knuckle Balbacua">
+            <div class="card-content">
+              <h3>Pork Knuckle Balbacua</h3>
+              <div class="card-footer">
+                <p class="price">₱450</p>
+                <button class="ordr-btn">Add to Cart</button>
+              </div>
             </div>
           </div>
-        </div>
-        <div class="card">
-          <img src="menu-images/FOOD13.jpg" alt="Red Velvet Cake">
-          <div class="card-content">
-            <h3>Red Velvet Cake</h3>
-            <div class="card-footer">
-              <p class="price gold">₱950</p>
-              <button class="ordr-btn">Add to Cart</button>
+          <div class="card">
+            <img src="menu-images/FOOD7.jpg" alt="Fried Chicken Delight">
+            <div class="card-content">
+              <h3>Fried Chicken Delight</h3>
+              <div class="card-footer">
+                <p class="price">₱220</p>
+                <button class="ordr-btn">Add to Cart</button>
+              </div>
+            </div>
+          </div>
+          <div class="card">
+            <img src="menu-images/FOOD8.jpg" alt="Beef Barbeque">
+            <div class="card-content">
+              <h3>Beef Barbeque</h3>
+              <div class="card-footer">
+                <p class="price">₱200</p>
+                <button class="ordr-btn">Add to Cart</button>
+              </div>
+            </div>
+          </div>
+          <div class="card">
+            <img src="menu-images/FOOD11.jpg" alt="Crispy Pata">
+            <div class="card-content">
+              <h3>Crispy Pata</h3>
+              <div class="card-footer">
+                <p class="price gold">₱980</p>
+                <button class="ordr-btn">Add to Cart</button>
+              </div>
             </div>
           </div>
         </div>
       </div>
-    </div>
-  </section>
 
+      <div class="menu-category">
+        <h2>Desserts</h2>
+        <div class="menu-grid">
+          <div class="card">
+            <img src="menu-images/FOOD12.jpg" alt="Red Cake Slice">
+            <div class="card-content">
+              <h3>Red Cake Slice</h3>
+              <div class="card-footer">
+                <p class="price">₱120</p>
+                <button class="ordr-btn">Add to Cart</button>
+              </div>
+            </div>
+          </div>
+          <div class="card">
+            <img src="menu-images/FOOD13.jpg" alt="Red Velvet Cake">
+            <div class="card-content">
+              <h3>Red Velvet Cake</h3>
+              <div class="card-footer">
+                <p class="price gold">₱950</p>
+                <button class="ordr-btn">Add to Cart</button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <footer>
+      <div class="footer">
+        <img src="icon.jpg" alt="Ka'Taqam Café Logo" class="logoicon2"> Ka'Taqam Café
+        <a href=""><img src="logos/icons8-facebook-144.png" alt=""></a>
+        <a href=""><img src="logos/icons8-instagram-144.png" alt=""></a>
+        <a href=""><img src="logos/icons8-tiktok-144.png" alt=""></a>
+      </div>
+    </footer>
+  </div>
+  <div class="message">
+    <h1>NOTICE</h1>
+    <h1>⚠️</h1>
+    <p>Your device is unfortunately too small for us to handle.<br>Please use a bigger device. <br>Thank you! :)</p>
+  </div>
   <script src="MAIN/script.js"></script>
 </body>
 
