Changes - Read DESC
fixed the address in main to match the imbedded map address.
Removed readme content (outdated)

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
           <div class="contact-info">
             <h2>Get In Touch</h2>
             <div class="contact-item">
-              <p><strong>📍 Address:</strong><br>Midtown Village, San Andres 1900 Cainta, Philippines</p>
+              <p><strong>📍 Address:</strong><br>Block 19, Midtown Subd, Lot 10 Rose St, Cainta, 1900 Rizal.</p>
             </div>
             <div class="contact-item">
               <p><strong>📞 Phone:</strong><br><a href="tel:09549848740">0954 984 8740</a></p>
